2006-08-08  Mike Kelly  <pioto@pioto.org>

	* doc/API.txt, doc/API_flowchart.dia, doc/API_flowchart.png,
	doc/API_flowchart2.dia,	doc/API_flowchart2.png: Update API
	documentation to reflect the addition of cleanup.bash. Now, all three
	points of interaction with the package manager take the same
	arguments.

2006-08-08  Mike Kelly  <pioto@pioto.org>

	* bash/cleanup.bash.in: Add a cleanup script, to be called to do all
	the proper database cleanup, etc, after a successful
	re-build/un-install.

2006-08-06  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Add support to the eselect module's scan
	mode to simply chown the files belonging to a found user or group to
	0:0 (root), rather than removing them.

	* doc/API.txt, doc/API_flowchart.dia, doc/API_flowchart.png,
	doc/API_flowchart2.dia, doc/API_flowchart2.png: Add flowcharts of the
	install and uninstall process to the API documentation.

2006-08-04  Mike Kelly  <pioto@pioto.org>

	* doc/auth_modules.txt: Add documentation of the auth module format.

2006-08-03  Mike Kelly  <pioto@pioto.org>

	* tools/get_autoconf_macros.sed: _'s are legal in variable names, too.

	* tools/subst.bash: Make the seds a little less harsh. Figured the
	only real way to get this stuff right is to source the confvars file
	several times in a row... But this seems bad...

2006-08-03  Mike Kelly  <pioto@pioto.org>

	* tools/get_autoconf_macros.sed, tools/subst.bash: Add a script,
	subst.bash, which will, given a file with @foo@ style autoconf
	substition markers, replace them. The difference between this and just
	using ./configure to do the job is that it'll fully evaluate any shell
	variables before substituting them, removing the need to do things
	like prefix=@prefix@ before the variable you actually care about.

2006-08-02  Mike Kelly  <pioto@pioto.org>

	* doc/API.txt: Clean up the API spec some more.

2006-08-01  Mike Kelly  <pioto@pioto.org>

	* (Everything): Begin a big 'ol rewrite of stuff, putting most code