@@ -1,10 +1,8 @@
-CLEANFILES = *~ .keep done-check
-MAINTAINERCLEANFILES = Makefile.in configure config/* aclocal.m4 \
-	INSTALL COPYING
 AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip
 EXTRA_DIST = autogen.bash doc tools
 SUBDIRS = . bash eselect
 
+# Make our db dirs stick around no matter what.
 userdbdir = $(localstatedir)/$(PACKAGE)/db/user
 userdb_DATA = .keep
 
@@ -14,6 +12,7 @@ groupdb_DATA = .keep
 .keep:
 	touch $@
 
-install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(bindir)
-	cd $(DESTDIR)$(bindir) ; ln -s eselect users-update
+CLEANFILES = *~ .keep done-check
+MAINTAINERCLEANFILES = Makefile.in configure config/* aclocal.m4 \
+	INSTALL COPYING
+
