@@ -1,34 +1,27 @@
-MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = .
-
-installcommonbackenddir = $(datadir)/$(PACKAGE)/common/
-
-installcommonbackend_SCRIPTS = \
+# Install our files in the proper place
+commonbackenddir = $(datadir)/$(PACKAGE)/common/
+commonbackend_DATA = \
 	config.bash \
 	getent.bash \
 	read_groupdata.bash \
 	read_userdata.bash \
 	functions.bash
 
-CLEANFILES = *~ $(installcommonbackend_SCRIPTS)
-
+# Some basic sanity checks.
 TESTS_ENVIRONMENT = env \
 	SCRIPTDIR="$(top_builddir)/bash/" \
 	bash $(top_srcdir)/tools/run_test.bash
-
 TESTS = getent_TEST.bash
-
-EXTRA_DIST = \
-	getent.bash.in \
-	read_groupdata.bash.in \
-	read_userdata.bash.in \
-	config.bash.in \
-	functions.bash.in \
-	$(TESTS)
-
 check_SCRIPTS = $(top_srcdir)/tools/run_test.bash
 check_PROGRAMS = 
 
+EXTRA_DIST = $(foreach f, $(commonbackend_DATA), $(f).in) \
+	$(TESTS)
+
+CLEANFILES = *~ $(commonbackend_DATA)
+MAINTAINERCLEANFILES = Makefile.in
+
+# Our "compiler"
 SUBST = $(top_srcdir)/tools/subst.bash
 
 % : %.in
